[package]
name = "udp_bcrelay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["cargo"] }
itertools = "0.13.0"
libc = "0.2.158"
log = "0.4.22"
netdev = "0.30.0"
socket2 = { version = "0.5.7", features = ["all"] }
stderrlog = { version = "0.6.0", default-features = false }

[dev-dependencies]
etherparse = "0.15.0"
